# Matrix

./: .clang-format  CMakeLists.txt  README.md  main.cpp
e2e_test/: CMakeLists.txt  funcs.hpp  test.cpp
includes/: buffer.hpp  matrix.hpp
tests/e2e_test/: CMakeLists.txt  test.sh
tests/e2e_test/data/: test2.in  test2.out  test3.out
tests/test1/: data.txt
tests/test2/: ans.txt  data.txt
tests/test3/: ans.txt  data.txt
tests/unit_test/: CMakeLists.txt  array_test.cpp  matrix_test.cpp
unit_test/: CMakeLists.txt  array_test.cpp  matrix_test.cpp  test.cpp
